--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-		<a type="button" href="festivalsale.html" class="btn text-warning">Festival Sale</a>
-		<a type="button" href="weekend.html" class="btn text-warning">Weekend Market</a>
-		<a type="button" class="btn text-warning"></a>
+			<a type="button" href="account.html" class="btn text-warning">Your Account</a>
+			<a type="button" href="orders.html" class="btn text-warning">Returns & Orders</a>	
+			<a type="button" href="cart.html" class="btn text-warning"><i class="fa fa-shopping-cart text-light" style="font-size:35px;" aria-hidden="true"></i> &nbsp;Cart</a>
 	  </li>
 
       <li class="nav-item">
