--- a/festivalsale.html
+++ b/festivalsale.html
@@ -38,9 +38,9 @@
 	   </li>
       
     </ul>
-			<a type="button" class="btn text-warning">Your Account</a>
-			<a type="button" class="btn text-warning">Returns & Orders</a>	
-			<a type="button" class="btn text-warning"><i class="fa fa-shopping-cart text-light" style="font-size:35px;" aria-hidden="true"></i> &nbsp;Cart</a>
+			<a type="button" href="account.html" class="btn text-warning">Your Account</a>
+			<a type="button" href="orders.html" class="btn text-warning">Returns & Orders</a>	
+			<a type="button" href="cart.html" class="btn text-warning"><i class="fa fa-shopping-cart text-light" style="font-size:35px;" aria-hidden="true"></i> &nbsp;Cart</a>
 			
   </div>
 </nav>  
